# RtpCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake
include/: RtpPacket.hpp  endianness.hpp
src/: RtpPacket.cpp
tests/: modify_rtp.cpp  packet_samples.hpp  parse_rtp.cpp  test_rtp.cpp
